--- a/style.css
+++ b/style.css
@@ -257,3 +257,116 @@ h1 {
         font-size: 0.9rem;
     }
 }
+
+.spotify-container {
+    position: fixed;
+    top: 10px;
+    right: 10px;
+    width: 50px; /* Tamaño pequeño por defecto */
+    height: 50px;
+    overflow: hidden;
+    border-radius: 12px;
+    transition: width 0.3s ease, height 0.3s ease;
+    z-index: 1000;
+}
+
+.spotify-container:hover {
+    width: 300px; /* Ancho completo del iframe */
+    height: 352px; /* Alto completo del iframe */
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+}
+
+.spotify-iframe {
+    width: 100%;
+    height: 100%;
+    pointer-events: none; /* Evita que el iframe interrumpa el efecto hover */
+}
+
+.spotify-container:hover .spotify-iframe {
+    pointer-events: auto; /* Habilita la interactividad en hover */
+}
+
+/* Estilos de la carta */
+.envelope {
+    position: fixed;
+    top: 10px;
+    left: 10px;
+    width: 50px;
+    height: 50px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    z-index: 1000;
+}
+
+.envelope-closed {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: black;
+    width: 100%;
+    height: 100%;
+    border-radius: 5px;
+}
+
+.envelope-opened {
+    display: none;
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding: 20px;
+    width: 250px;
+    height: 200px;
+    background-color: #fff;
+    border: 2px solid #f28e8e;
+    border-radius: 10px;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+    text-align: center;
+}
+
+.envelope-opened form {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.envelope-opened input, .envelope-opened button {
+    padding: 8px;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+}
+
+.envelope-opened button {
+    background-color: #f28e8e;
+    color: #fff;
+    cursor: pointer;
+    border: none;
+}
+
+.envelope:hover .envelope-closed {
+    display: none;
+}
+
+.envelope:hover .envelope-opened {
+    display: block;
+}
+
+.envelope-closed .closed-icon {
+    width: 100%;
+    height: auto;
+    max-width: 40px; /* Tamaño máximo de la imagen para que sea pequeña */
+    max-height: 40px; /* Ajusta esto si quieres que la imagen sea más grande o más pequeña */
+    object-fit: contain;
+}
+
+.btn_spotify {
+    text-decoration: none;
+    background-color: black;
+    color: #FFFFFF;
+    border: 2px solid #4EAD33;
+    padding: 10px 25px;
+    border-radius: 8px;
+    box-shadow: 0.5rem 1rem 3rem hsl(0, 0, 0,0.3);
+    font-size: 18px;
+    font-weight: bold;
+    transition: background-color 0.3s ease, transform 0.3s ease;
+}
